...
        android:id="@+id/navigation_filtre"
        android:icon="@mipmap/color"
        android:title=""
        />

    <item
        android:id="@+id/navigation_modif"
        android:icon="@mipmap/crop"
        android:title=""/>

    <item
        android:id="@+id/navigation_adv"
        android:icon="@mipmap/adj"
        android:title=""/>


</menu>

