...
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:onClick="xButtonAction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/back2"
        app:srcCompat="@drawable/x" />

    <ImageButton
        android:id="@+id/back2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="30dp"
...
